samples/_failures_safe/1761255195_81fbec_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_eaa14da2.c: In function ‘main’:
./samples/SAFE/__tmp_eaa14da2.c:161:38: error: missing terminating ' character
  161 |             buffer[buffer_len - 1] = '\
      |                                      ^~
./samples/SAFE/__tmp_eaa14da2.c:161:13: error: expected expression at end of input
  161 |             buffer[buffer_len - 1] = '\
      |             ^~~~~~
./samples/SAFE/__tmp_eaa14da2.c:161:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_eaa14da2.c:161:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_eaa14da2.c:161:13: error: expected declaration or statement at end of input
